Ajustando imagenes y color de texto

--- a/info/planes/boyaca.html
+++ b/info/planes/boyaca.html
@@ -1,5 +1,5 @@
-<p id="contenido_destino" style="display:block;">PLAN BOYACA ENCANTADORA<br><br>
-
+<div id="contenido_destino" style="display:block;">
+<h3>PLAN BOYACA ENCANTADORA</h3>
 EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 04 Desayunos / 03Cenas <br>
@@ -15,4 +15,5 @@ EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
 
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
-</p><img alt="Boyaca" src="../images/boyaca.jpg" id="imagen_destino" style="display:block;"/>
+</div>
+    <img alt="Boyaca" src="../images/boyaca.jpg" id="imagen_destino" style="display:block;"/>
