--- a/info/planes/eje_cafetero.html
+++ b/info/planes/eje_cafetero.html
@@ -1,5 +1,5 @@
-<p id="contenido_destino" style="display:block;">PLAN TRADICIONAL EJE CAFETERO<br><br>
-
+<div id="contenido_destino" style="display:block;">
+<h3>PLAN TRADICIONAL EJE CAFETERO</h3>
 EL PLAN INCLUYE(4 DIAS 3 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 04 Desayunos / 03 Cenas<br>
@@ -16,8 +16,7 @@ EL PLAN INCLUYE(4 DIAS 3 NOCHES)<br>
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
 
-PLAN AVENTURA EJE CAFETERO<br><br>
-
+<h3>PLAN AVENTURA EJE CAFETERO</h3>
  EL PLAN INCLUYE(5 DIAS - 4 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 04 Desayunos / 03 Cenas / 01 Almuerzo<br>
@@ -34,10 +33,9 @@ PLAN AVENTURA EJE CAFETERO<br><br>
 * Coordinador de viaje<br><br>
 
 NO INCLUYE<br>
-* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 
-PLAN EJE CAFETERO – BUGA Y VIÑEDOS<br><br>
-
+<h3>PLAN EJE CAFETERO – BUGA Y VIÑEDOS</h3>
  EL PLAN INCLUYE (6 DIAS - 5 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 05 Desayunos / 05 Cenas <br>
@@ -55,5 +53,5 @@ PLAN EJE CAFETERO – BUGA Y VIÑEDOS<br><br>
 
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
-</p>
+</div>
 <img alt="Eje Cafetero" src="../images/eje_cafetero.jpg" id="imagen_destino" style="display:block;"/>
