--- a/info/planes/guajira.html
+++ b/info/planes/guajira.html
@@ -1,5 +1,5 @@
-<p id="contenido_destino" style="display:block;">PLAN GUAJIRA EXÓTICA<br><br>
-
+<div id="contenido_destino" style="display:block;">
+<h3>PLAN GUAJIRA EXÓTICA</h3>
 EL PLAN INCLUYE (9 DIAS - 8 NOCHES)<br>
 * Transporte ida y regreso en buses de turismo FULL EQUIPO<br>
 * Alojamiento 1 noches Hotel Medellín, 2 noches hotel Tolú, 2 noches en Cartagena, 2 noche Santa Martha (Rodadero)<br>
@@ -15,5 +15,5 @@ EL PLAN INCLUYE (9 DIAS - 8 NOCHES)<br>
 NO INCLUYE<br>
 * Seguros Hotelero, Gastos no estipulados en el plan.<br>
 
-</p>
+</div>
 <img alt="Guajira" src="../images/guajira.jpg" id="imagen_destino" style="display:block;"/>
