--- a/info/planes/llanos_orientales.html
+++ b/info/planes/llanos_orientales.html
@@ -1,5 +1,5 @@
-<p id="contenido_destino" style="display:block;">PLAN LLANOS ORIENTALES<br><br>
-    
+<div id="contenido_destino" style="display:block;">
+    <h3>PLAN LLANOS ORIENTALES</h3> 
 EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 05 Desayunos / 04Cenas <br>
@@ -15,5 +15,5 @@ EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 
-</p>
+</div>
 <img alt="Llano Orientales" src="../images/llanos.jpg" id="imagen_destino" style="display:block;"/>
