--- a/info/planes/medellin.html
+++ b/info/planes/medellin.html
@@ -1,5 +1,5 @@
-<p id="contenido_destino" style="display:block;">PLAN MEDELLIN – GUATAPE – TOLU - COVEÑAS<br><br>
-
+<div id="contenido_destino" style="display:block;">
+    <h3>PLAN MEDELLIN – GUATAPE – TOLU - COVEÑAS</h3>
 EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alojamiento 1 noches Hotel Medellín, 3 noches hotel Tolú<br>
@@ -16,11 +16,9 @@ EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 * Coordinador de viaje<br><br>
 
 NO INCLUYE<br>
-* Seguros Hotelero, Gastos no estipulados en el plan.<br><br>
+* Seguros Hotelero, Gastos no estipulados en el plan.<br>
 
-
-PLAN MEDELLIN – COSTA CARIBE<br><br>
-
+<h3>PLAN MEDELLIN – COSTA CARIBE</h3>
 EL PLAN INCLUYE(10 DIAS)<br>
 * Transporte ida y regreso en buses de turismo FULL EQUIPO<br>
 * Alojamiento 1 noches Hotel Medellín, 2 noches hotel Tolú, 2 noches en Cartagena, 2 noche Santa Martha (Rodadero)<br>
@@ -38,5 +36,5 @@ EL PLAN INCLUYE(10 DIAS)<br>
 
 NO INCLUYE<br>
 * Seguros Hotelero, Gastos no estipulados en el plan.<br>
-</p>
+</div>
 <img alt="Medellin" src="../images/medellin.jpg" id="imagen_destino" style="display:block;"/>
