--- a/info/planes/san_gil.html
+++ b/info/planes/san_gil.html
@@ -1,5 +1,4 @@
-<p id="contenido_destino" style="display:block;">PLAN SAN GIL AVENTURA TOTAL<br><br>
-
+<div id="contenido_destino" style="display:block;"><h3>PLAN SAN GIL AVENTURA TOTAL</h3>
 EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 04 Desayunos / 03 Cenas<br>
@@ -14,13 +13,12 @@ EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
 * City Tour San Gil<br>
 * City Tour Barichara – Guane  (Entrada Museo)<br>
 * Asistencia Medica<br>
-* Coordinador de viaje<br><br>
+* Coordinador de viaje<br>
 
 NO INCLUYE<br>
-* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.
 
-PLAN SAN GIL CULTURAL Y RELIGIOSO<br><br>
-
+<h3>PLAN SAN GIL CULTURAL Y RELIGIOSO</h3>
 EL PLAN INCLUYE (3 DIAS - 2 NOCHES)<br>
 * Transporte ida y regreso<br>
 * Alimentación 03 Desayunos / 02 Cenas<br>
@@ -38,5 +36,5 @@ EL PLAN INCLUYE (3 DIAS - 2 NOCHES)<br>
 <b>NO INCLUYE</b><br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 
-</p>
+</div>
 <img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
