--- a/info/planes/amazonas.html
+++ b/info/planes/amazonas.html
@@ -1,5 +1,4 @@
-<p id="contenido_destino" style="display:block;">PLAN AMAZONAS EXÓTICA<br><br>
-
+<div id="contenido_destino" style="display:block;"><h3>PLAN AMAZONAS EXÓTICA</h3>
 EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 * Transportes Aéreos Bogotá- Leticia – Bogotá<br>
 * Transporte Aeropuerto – Hotel – Aeropuerto<br>
@@ -16,6 +15,5 @@ EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
 
 NO INCLUYE<br>
 * Seguros Hoteleros, Tarjeta de entrada a Leticia, Gastos no estipulados en el plan.<br>
-
-</p>
+</div>
 <img alt="Amazonas" src="../images/amazonas.jpg" id="imagen_destino" style="display:block;"/>
