cambio de imagenes de decamerun.. mejora en el kuadro

--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -2,4 +2,4 @@
 <p>El hotel tiene 42 habitaciones equipadas con baño, aire acondicionado, nevera y televisión por cable.</p>
 <p>Las instalaciones incluyen restaurante, tipo Buffet y a la carta, jacuzzi, bar la Punta, show de delfines, museo marino y acuario, coco spa y gimnasio.</p>
     </div>
-<div id="img"><img alt="Isla Palma" src="../images/decamerun/img_palma.jpg" id="imagen_centrada"></div>
+<div id="img"><img alt="Isla Palma" src="../images/decamerun/img_palma.png" id="imagen_centrada"></div>
