--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -3,4 +3,4 @@ Está ubicado en una propiedad frente a la playa en el sector de South West Bay 
 <b>Miss Elma, Posada del Mar</b>
 Miss Elma , tiene 6 cómodas habitaciones de acomodación múltiple de 2 a 5 personas, todas equipadas con aire acondicionado y televisión por cable, un restaurante con capacidad para 80 personas, abierto para desayuno almuerzo y cena donde puede disfrutar de las especialidades en comida típica isleña, un salón de juegos disponible  y un snack frente a la playa, incluye desayuno.
 </div>
-<div id="img"><img alt="Providencia" src="../images/decamerun/img_providencia.jpg" id="imagen_centrada"></div>
+<div id="img"><img alt="Providencia" src="../images/decamerun/img_providencia.png" id="imagen_centrada"></div>
