--- a/info/decamerun/baru.html
+++ b/info/decamerun/baru.html
@@ -1,4 +1,4 @@
 <div id="contenido"><p>Este hermoso resort se encuentra ubicado en la isla de Barú asolo 90 kilómetros del aeropuerto internacional de Cartagena. Es un escondite tropical caracterizado por sus playas de arena blanca y aguas cristalinas protegido por arrecifes de corales multicolores.</p>
 <p>366 habitaciones, divididas en 321 habitaciones estándar (algunas con vista al mar y/o a la ciénaga) y 45 habitaciones Deluxe frente al mar, ambas equipadas con aire acondicionado, televisión por cable, secador de cabello terraza o balcón. 
 </p></div>
-<div id="img"><img alt="Baru" src="../images/decamerun/img_baru.jpg" id="imagen_centrada"></div>
+<div id="img"><img alt="Baru" src="../images/decamerun/img_baru.png" id="imagen_centrada"></div>
