Se agrego info modificada de documentos

--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -1,5 +1,7 @@
-<div id="contenido"><p><p>Es una exclusiva isla privada situada en el parque Nacional Natural Corales del Rosario y San Bernardo a solo tres Horas de Cartagena en bus más 15 minutos en lancha rápida. El hotel está rodeado de playas exóticas, arrecifes coralinos, flamingos rosados y manglares con una inmensa variedad de Fauna, flora continental y marina.</p>
-<p>El hotel tiene 42 habitaciones equipadas con baño, aire acondicionado, nevera y televisión por cable.</p>
-<p>Las instalaciones incluyen restaurante, tipo Buffet y a la carta, jacuzzi, bar la Punta, show de delfines, museo marino y acuario, coco spa y gimnasio.</p>
-    </div>
-<div id="img"><img alt="Isla Palma" src="../images/decamerun/img_palma.png" id="imagen_centrada"></div>
+<div id="contenido">
+    <p>Es una exclusiva isla privada solo tres Horas de Cartagena en bus más 15 minutos en lancha rápida. El hotel está rodeado de playas exóticas, arrecifes coralinos, flamingos rosados y manglares con una inmensa variedad de Fauna, flora continental y marina.</p>
+    <p>El hotel tiene 42 habitaciones equipadas con baño, aire acondicionado, nevera y televisión por cable. Las instalaciones incluyen restaurante, tipo Buffet y a la carta, jacuzzi, bar la Punta, show de delfines, museo marino y acuario, coco spa y gimnasio.</p>
+</div>
+<div id="img">
+    <img alt="Isla Palma" src="../images/decamerun/img_palma.png" id="imagen_centrada">
+</div>
