--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -1,6 +1,7 @@
-<div id="contenido"><p><b>Cabañas del mar Miss Mary</b>
-Está ubicado en una propiedad frente a la playa en el sector de South West Bay con 8 habitaciones dotadas con aire acondicionado, 8  habitaciones dotadas con aire acondicionado televisión por cable y mini bar, 4 de ellas con terraza y hamaca, el restaurante está abierto para desayuno almuerzo y comida. El bar y salón nocturnos está disponibles en horario nocturno, disfrute con cargo adicional, de masajes en la habitación incluye el desayuno.
-<b>Miss Elma, Posada del Mar</b>
-Miss Elma , tiene 6 cómodas habitaciones de acomodación múltiple de 2 a 5 personas, todas equipadas con aire acondicionado y televisión por cable, un restaurante con capacidad para 80 personas, abierto para desayuno almuerzo y cena donde puede disfrutar de las especialidades en comida típica isleña, un salón de juegos disponible  y un snack frente a la playa, incluye desayuno.
+<div id="contenido">
+    <p>Ofrece las Cabañas del mar Miss Mary Está ubicado en una propiedad frente a la playa en el sector de South West Bay con 8 habitaciones dotadas con aire acondicionado. Disfrute con cargo adicional, de masajes en la habitación incluye el desayuno.</p>
+    <p>Miss Elma, Posada del Mar tiene 6 cómodas habitaciones de acomodación múltiple de 2 a 5 personas, está ubicada en una propiedad frente a la playa. Cuenta con piscina, parque infantil y un restaurant.</p>
 </div>
-<div id="img"><img alt="Providencia" src="../images/decamerun/img_providencia.png" id="imagen_centrada"></div>
+<div id="img">
+    <img alt="Providencia" src="../images/decamerun/img_providencia.png" id="imagen_centrada">
+</div>
