--- a/info/empresa/mision.html
+++ b/info/empresa/mision.html
@@ -1,9 +1,7 @@
-<div class="contenido_empresa"><p><b>EMPRESA</b><br>
-Terrazsantours es una agencia de viajes y turismo dedicada a la organización de planes e itinerarios además, de la venta de productos turísticos entre clientes y proveedores, con un fin único de poner bienes y servicios turísticos a disposición de quienes puedan suplir necesidades de disfrute.
-<br><br><b>MISIÓN</b><br>
-Terrazsantours es una agencia privada cuyo principal compromiso es la satisfacción de las necesidades de disfrute y descanso del cliente, ofreciendo servicios y productos de excelente calidad.
-<br><br><b>VISIÓN</b><br>
-Terrazsantours se consolidará como la empresa líder del mercado turístico en Santander y se caracterizará por su excelencia en el servicio al cliente y la satisfacción de sus necesidades de disfrute y descanso.
-    </p>
+<div class="contenido_empresa">
+    <h3>EMPRESA</h3>Terrazsantours es una agencia de viajes y turismo dedicada a la organización de planes e itinerarios además, de la venta de productos turísticos entre clientes y proveedores, con un fin único de poner bienes y servicios turísticos a disposición de quienes puedan suplir necesidades de disfrute.
+    <h3>MISIÓN</h3>Terrazsantours es una agencia privada cuyo principal compromiso es la satisfacción de las necesidades de disfrute y descanso del cliente, ofreciendo servicios y productos de excelente calidad.
+    <h3>VISIÓN</h3>Terrazsantours se consolidará como la empresa líder del mercado turístico en Santander y se caracterizará por su excelencia en el servicio al cliente y la satisfacción de sus necesidades de disfrute y descanso.
+    <h3>OBJETIVO</h3>El principal objetivo de Terrazsantours es consolidarse como la primera opción para los amantes del turismo al momento de adquirir nuevas experiencias, además de la satisfacción el cliente mediante servicios y productos de excelente calidad.
 </div>
 <!--<div id="img"><img alt="San Andres" src="../images/decamerun/img_san_andres.jpg" id="imagen_centrada"></div>-->
