--- a/info/decamerun/cartagena.html
+++ b/info/decamerun/cartagena.html
@@ -1,4 +1,5 @@
 <div id="contenido">
+    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_cartagena.png" class="imagen_titulo"></div>
     <p>El hotel es un edificio de 23 pisos situado frente a las populares playas Bocagrande con una magnifica vista al mar y a la antigua ciudad amurallada. Ofrece 280 habitaciones en estándar u junior  suites, equipadas con baños, secador de cabello, servicio telefónico, aire acondicionado, televisión por cable.</p>
     <p>El Hotel Decameron de Cartagena ofrece a sus huéspedes, sin costo adicional y con transporte una cena romántica en los mejores restaurantes de Cartagena.</p>
 </div>
