--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -1,4 +1,5 @@
 <div id="contenido">
+    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_providencia.png" class="imagen_titulo"></div>
     <p>Ofrece las Cabañas del mar Miss Mary Está ubicado en una propiedad frente a la playa en el sector de South West Bay con 8 habitaciones dotadas con aire acondicionado. Disfrute con cargo adicional, de masajes en la habitación incluye el desayuno.</p>
     <p>Miss Elma, Posada del Mar tiene 6 cómodas habitaciones de acomodación múltiple de 2 a 5 personas, está ubicada en una propiedad frente a la playa. Cuenta con piscina, parque infantil y un restaurant.</p>
 </div>
