--- a/info/empresa/valores.html
+++ b/info/empresa/valores.html
@@ -1,4 +1,4 @@
-<div class="contenido_empresa"><p><b>VALORES CORPORATIVOS</b><br>
+<div class="contenido_empresa" id="valores"><p><b>VALORES CORPORATIVOS</b><br>
 Nuestra empresa está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.Terrazsantours está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.
 <br><br><b>COMPROMISO</b><br>
 El lazo que nos une con nuestros colaboradores y clientes nos lleva a cumplir con el desarrollo del trabajo dentro del plazo que se ha estipulado siempre teniendo presente que este es leal, profesional y responsable.
