Cambiando fuentes en los docs de decamerun

--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -1,5 +1,5 @@
 <div id="contenido">
-    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_palma.png" class="imagen_titulo"></div>
+    <div class="titulo_decamerun">ISLA PALMA</div>
     <p>Es una exclusiva isla privada solo tres Horas de Cartagena en bus más 15 minutos en lancha rápida. El hotel está rodeado de playas exóticas, arrecifes coralinos, flamingos rosados y manglares con una inmensa variedad de Fauna, flora continental y marina.</p>
     <p>El hotel tiene 42 habitaciones equipadas con baño, aire acondicionado, nevera y televisión por cable. Las instalaciones incluyen restaurante, tipo Buffet y a la carta, jacuzzi, bar la Punta, show de delfines, museo marino y acuario, coco spa y gimnasio.</p>
 </div>
