--- a/info/decamerun/san_andres.html
+++ b/info/decamerun/san_andres.html
@@ -1,5 +1,5 @@
 <div id="contenido">
-    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_san_andres.png" class="imagen_titulo"></div>
+    <div class="titulo_decamerun">SAN ANDRES</div>
     <p>Construido sobre el mar en punta Hansa el extremo Norte de la Isla, aproximadamente a 10 minutos del aeropuerto ya solo pocas cuadras del centro.</p>
     <p>El hotel cuenta con 283 habitaciones estándar, 12 junior suites y 2 master suites, con terraza y balcón, la mayoría con vista al mar y todas equipadas con baño, televisión por cable aire acondicionado, nevera, teléfono y cajilla de seguridad. San Andrés también ofrece Hoteles como  los delfines, Maryland, San Luis, y próximamente El isleño.</p>
 </div>
