--- a/info/decamerun/baru.html
+++ b/info/decamerun/baru.html
@@ -1,5 +1,5 @@
 <div id="contenido">
-    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_baru.png" class="imagen_titulo"></div>
+    <div class="titulo_decamerun">BARÚ</div>
     <p>Este hermoso resort se encuentra ubicado en la isla de Barú asolo 90 kilómetros del aeropuerto internacional de Cartagena. Es un escondite tropical caracterizado por sus playas de arena blanca y aguas cristalinas protegido por arrecifes de corales multicolores.</p>
     <p>366 habitaciones, divididas en 321 habitaciones estándar (algunas con vista al mar y/o a la ciénaga) y 45 habitaciones Deluxe frente al mar, ambas equipadas con aire acondicionado, televisión por cable, secador de cabello terraza o balcón. </p>
 </div>
