--- a/info/decamerun/santamarta.html
+++ b/info/decamerun/santamarta.html
@@ -1,5 +1,5 @@
 <div id="contenido">
-    <div class="titulo_decamerun"><img alt="Baru" src="../images/decamerun/titulo_santamarta.png" class="imagen_titulo"></div>
+    <div class="titulo_decamerun">SANTA MARTA</div>
     <p>A solo 10 minutos del aeropuerto de Santa Marta y 90 del aeropuerto de Barranquilla, sobre una linda playa caribeña, se ubica el Decameron Galeón, una imponente torre hotelera rodeada de villas familiares y jardines exuberantes.</p>
     <p>El Decameron Galeón tiene 243 habitaciones divididas en Villas y habitaciones equipadas con baño privado, secado de cabello, televisión por cable, aire acondicionado, teléfono y cajilla de seguridad.</p>
 </div>
