Agregando bordes redondeados

--- a/info/empresa/valores.html
+++ b/info/empresa/valores.html
@@ -1,11 +1,7 @@
-<div class="contenido_empresa" id="valores"><p><b>VALORES CORPORATIVOS</b><br>
-Nuestra empresa está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.Terrazsantours está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.
-<br><br><b>COMPROMISO</b><br>
-El lazo que nos une con nuestros colaboradores y clientes nos lleva a cumplir con el desarrollo del trabajo dentro del plazo que se ha estipulado siempre teniendo presente que este es leal, profesional y responsable.
-<br><br><b>CALIDAD EN EL SERVICIO</b><br>
-En cada servicio que brindamos le ofrecemos al cliente simpatía, cortesía, atención rápida, confiabilidad y atención personal, de esta forma él encuentra satisfechas sus necesidades. 
-<br><br><b>RESPONSABILIDAD</b><br>
-Trabajamos de manera constante teniendo presente que la responsabilidad es la virtud no sólo de tomar una serie de decisiones de manera consciente sino también de asumir las consecuencias que tengan las citadas decisiones y de responder de las mismas ante quien corresponda en cada momento. Es así como de nuestra responsabilidad depende la satisfacción de nuestros clientes.
-    </p>
+<div class="contenido_empresa" id="valores">
+    <h3>VALORES CORPORATIVOS</h3>Nuestra empresa está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.Terrazsantours está orientada por el compromiso, la calidad en el servicio, y la responsabilidad.
+    <h3>COMPROMISO</h3>El lazo que nos une con nuestros colaboradores y clientes nos lleva a cumplir con el desarrollo del trabajo dentro del plazo que se ha estipulado siempre teniendo presente que este es leal, profesional y responsable.
+    <h3>CALIDAD EN EL SERVICIO</h3>En cada servicio que brindamos le ofrecemos al cliente simpatía, cortesía, atención rápida, confiabilidad y atención personal, de esta forma él encuentra satisfechas sus necesidades. 
+    <h3>RESPONSABILIDAD</h3>Trabajamos de manera constante teniendo presente que la responsabilidad es la virtud no sólo de tomar una serie de decisiones de manera consciente sino también de asumir las consecuencias que tengan las citadas decisiones y de responder de las mismas ante quien corresponda en cada momento. Es así como de nuestra responsabilidad depende la satisfacción de nuestros clientes.
 </div>
 <!--<div id="img"><img alt="San Andres" src="../images/decamerun/img_san_andres.jpg" id="imagen_centrada"></div>-->
