--- a/info/decamerun/cartagena.html
+++ b/info/decamerun/cartagena.html
@@ -5,4 +5,5 @@
 </div>
 <div id="img">
     <img alt="Cartagena" src="../images/decamerun/img_cartagena.png" id="imagen_centrada">
+     <a href="javascript:mostrarGaleria('cartagena')" class="btn_galeria"></a>
 </div>
