--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -5,4 +5,5 @@
 </div>
 <div id="img">
     <img alt="Providencia" src="../images/decamerun/img_providencia.png" id="imagen_centrada">
+     <a href="javascript:mostrarGaleria('providencia')" class="btn_galeria"></a>
 </div>
