--- a/info/decamerun/san_andres.html
+++ b/info/decamerun/san_andres.html
@@ -5,4 +5,5 @@
 </div>
 <div id="img">
     <img alt="San Andres" src="../images/decamerun/img_san_andres.png" id="imagen_centrada">
+     <a href="javascript:mostrarGaleria('san_andres')" class="btn_galeria"></a>
 </div>
