--- a/info/decamerun/santamarta.html
+++ b/info/decamerun/santamarta.html
@@ -5,4 +5,5 @@
 </div>
 <div id="img">
     <img alt="Santa Marta" src="../images/decamerun/img_santamarta.png" id="imagen_centrada">
+     <a href="javascript:mostrarGaleria('santa_marta')" class="btn_galeria"></a>
 </div>
