Modificando para que sea compatible con firefox..  ademax se agrego la galeria

--- a/info/decamerun/baru.html
+++ b/info/decamerun/baru.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Baru" src="../images/decamerun/img_baru.png" id="imagen_centrada">
-    <a href="javascript:mostrarGaleria('baru')" title="section1" class="btn_galeria"></a>
+    <a href="javascript:mostrarGaleria('baru')" title="section1" >Ver Galeria</a>
 </div>
