--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Isla Palma" src="../images/decamerun/img_palma.png" id="imagen_centrada">
-     <a href="javascript:mostrarGaleria('palma')" class="btn_galeria"></a>
+    <a href="javascript:mostrarGaleria('palma')" title="section1" >Ver Galeria</a>
 </div>
