--- a/info/planes/eje_cafetero.html
+++ b/info/planes/eje_cafetero.html
@@ -54,4 +54,4 @@ NO INCLUYE<br>
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 </div>
-<img alt="Eje Cafetero" src="../images/eje_cafetero.jpg" id="imagen_destino" style="display:block;"/>
+<a href="Galeria.php"><img alt="Eje Cafetero" src="../images/home/btn_galeria_eje_cafetero.png" id="imagen_destino" style="display:block;"/></a>
