--- a/info/planes/llanos_orientales.html
+++ b/info/planes/llanos_orientales.html
@@ -16,4 +16,4 @@ NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 
 </div>
-<img alt="Llano Orientales" src="../images/llanos.jpg" id="imagen_destino" style="display:block;"/>
+<a href="Galeria.php"><img alt="Llano Orientales" src="../images/home/btn_galeria_llanos.png" id="imagen_destino" style="display:block;"/></a>
