--- a/info/planes/popup.html
+++ b/info/planes/popup.html
@@ -1,3 +1,3 @@
-<div id="cont_imagen_info" style="display:block;">
+<div id="cont_imagen_info" >
     <a href="#"><img alt="Imagen Informativa" src="../images/home/btn_galeria_amazonas.png" id="img_info" /></a>
 </div>
