--- a/info/decamerun/cartagena.html
+++ b/info/decamerun/cartagena.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Cartagena" src="../images/decamerun/img_cartagena.png" id="imagen_centrada">
-     <a href="javascript:mostrarGaleria('cartagena')" title="section1" >Ver Galeria</a>
+     <a href="javascript:mostrar('plan_cartagena','decamerun','jpg')" title="section1" >Ver Galeria</a>
 </div>
