--- a/info/decamerun/santamarta.html
+++ b/info/decamerun/santamarta.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Santa Marta" src="../images/decamerun/img_santamarta.png" id="imagen_centrada">
-    <a href="javascript:mostrarGaleria('santamarta')" title="section1" >Ver Galeria</a>
+    <a href="javascript:mostrar('plan_santamarta','decamerun','jpg')" title="section1" >Ver Galeria</a>
 </div>
