--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Isla Palma" src="../images/decamerun/img_palma.png" id="imagen_centrada">
-    <a href="javascript:mostrar('plan_palma','decamerun','jpg')" title="section1" >Ver Galeria</a>
+    <a href="javascript:mostrar('plan_palma','decamerun','html')" title="section1" >Ver Plan</a>
 </div>
