--- a/info/decamerun/san_andres.html
+++ b/info/decamerun/san_andres.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="San Andres" src="../images/decamerun/img_san_andres.png" id="imagen_centrada">
-    <a href="javascript:mostrar('plan_san_andres','decamerun','jpg')" title="section1" >Ver Galeria</a>
+    <a href="javascript:mostrar('plan_san_andres','decamerun','html')" title="section1" >Ver Plan</a>
 </div>
