--- a/info/planes/popup.html
+++ b/info/planes/popup.html
@@ -1,3 +1,3 @@
 <div id="cont_imagen_info" >
-    <a href="#"><img alt="Imagen Informativa" src="../images/version 2.1/popup.png" id="img_info" /></a>
+    <img alt="Imagen Informativa" src="../images/version 2.1/popup.jpg" id="img_info" />
 </div>
