--- a/info/extras/footer.html
+++ b/info/extras/footer.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+<div>Derechos Reservados<br>TerrazsanTours<br>2014</div>
