Agregando administracion a cada archivo..

--- a/info/planes/medellin.html
+++ b/info/planes/medellin.html
@@ -37,4 +37,4 @@ EL PLAN INCLUYE(10 DIAS)<br>
 NO INCLUYE<br>
 * Seguros Hotelero, Gastos no estipulados en el plan.<br>
 </div>
-<a href="Galeria.php"><img alt="Medellin" src="../images/home/btn_galeria/btn_galeria_medellin.png.jpg" id="imagen_destino" style="display:block;"/></a>
+<a href="Galeria.php"><img alt="Medellin" src="../images/home/btn_galeria/btn_galeria_medellin.png" id="imagen_destino" style="display:block;"/></a>
