--- a/info/galeria/galeria_baru.html
+++ b/info/galeria/galeria_baru.html
@@ -1,5 +1,5 @@
-<div id="galeria_baru" style="position:relative; display: none">
-    <ul id="galeria">
+<div id="galeria_baru" style="position:relative; ">
+    <ul id="gallery">
         <li><img src="../images/imgBaru/flowing-rock.jpg" alt="Flowing Rock" title="Flowing Rock Caption"></li>
         <li><img src="../images/imgBaru/stones.jpg" alt="Stones" title="Stones - from Apple images"></li>
         <li><img src="../images/imgBaru/grass-blades.jpg" alt="Grass Blades" title="Apple nature desktop images"></li>
@@ -11,4 +11,3 @@
         <li><img src="../images/imgBaru/sea-mist.jpg" alt="Sea Mist" title="Caption text from title"></li>
      </ul>
 </div>
-   
