--- a/info/galeria/galeria_cartagena.html
+++ b/info/galeria/galeria_cartagena.html
@@ -1,5 +1,5 @@
-<div id="galeria_cartagena" style="position:relative; display: none">
-    <ul id="galleria">
+<div id="galeria_cartagena" style="position:relative;">
+    <ul id="gallery">
         <li><img src="../images/imgBaru/flowing-rock.jpg" alt="Flowing Rock" title="Flowing Rock Caption"></li>
         <li><img src="../images/imgBaru/stones.jpg" alt="Stones" title="Stones - from Apple images"></li>
         <li><img src="../images/imgBaru/grass-blades.jpg" alt="Grass Blades" title="Apple nature desktop images"></li>
