Cambiando logica de las galeria..

--- a/info/galeria/galeria_baru.html
+++ b/info/galeria/galeria_baru.html
@@ -1,5 +1,5 @@
 <div id="galeria_baru" style="position:relative; ">
-    <ul id="gallery">
+    <ul id="gallery_demo_unstyled">
         <li><img src="../images/imgBaru/flowing-rock.jpg" alt="Flowing Rock" title="Flowing Rock Caption"></li>
         <li><img src="../images/imgBaru/stones.jpg" alt="Stones" title="Stones - from Apple images"></li>
         <li><img src="../images/imgBaru/grass-blades.jpg" alt="Grass Blades" title="Apple nature desktop images"></li>
