--- a/pages/Galeria2.html
+++ b/pages/Galeria2.html
@@ -1,7 +1,11 @@
 <html>
     <head>
         <link href="../css/galeria.css" rel="stylesheet">
-        <script type="text/javascript" src="../js/galeria.js"></script>   
+        <script type="text/javascript" src="../js/jquery.min.js"></script>   
+        <script src="../js/Funciones.js"></script>    
+        <script type="text/javascript" src="../js/jquery.galleria.js"></script> 
+        <script type="text/javascript" src="../js/galeria.js"></script>  
+        
     </head>
     <body>
         <div style="position:relative;">
@@ -17,6 +21,10 @@
                 <li><img src="../images/imgBaru/sea-mist.jpg" alt="Sea Mist" title="Caption text from title"></li>
             </ul>
         </div>
+        <script type="text/javascript">
+            initGaleria();
+        </script> 
     </body>
+
 </html>
    
