--- a/pages/Galeria2.html
+++ b/pages/Galeria2.html
@@ -1,30 +1,15 @@
-<html>
-    <head>
-        <link href="../css/galeria.css" rel="stylesheet">
-        <script type="text/javascript" src="../js/jquery.min.js"></script>   
-        <script src="../js/Funciones.js"></script>    
-        <script type="text/javascript" src="../js/jquery.galleria.js"></script> 
-        <script type="text/javascript" src="../js/galeria.js"></script>  
-        
-    </head>
-    <body>
-        <div style="position:relative;">
-            <ul id="gallery">
-                <li><img src="../images/imgBaru/flowing-rock.jpg" alt="Flowing Rock" title="Flowing Rock Caption"></li>
-                <li><img src="../images/imgBaru/stones.jpg" alt="Stones" title="Stones - from Apple images"></li>
-                <li><img src="../images/imgBaru/grass-blades.jpg" alt="Grass Blades" title="Apple nature desktop images"></li>
-                <li><img src="../images/imgBaru/ladybug.jpg" alt="Ladybug" title="Ut rutrum, lectus eu pulvinar elementum, lacus urna vestibulum ipsum"></li>
-                <li><img src="../images/imgBaru/lightning.jpg" alt="Lightning" title="Black &amp; White"></li>
-                <li><img src="../images/imgBaru/lotus.jpg" alt="Lotus" title="Fusce quam mi, sagittis nec, adipiscing at, sodales quis"></li>
-                <li><img src="../images/imgBaru/mojave.jpg" alt="Mojave" title="Suspendisse volutpat posuere dui. Suspendisse sit amet lorem et risus faucibus pellentesque."></li>
-                <li><img src="../images/imgBaru/pier.jpg" alt="Pier" title="Proin erat nisi"></li>
-                <li><img src="../images/imgBaru/sea-mist.jpg" alt="Sea Mist" title="Caption text from title"></li>
-            </ul>
-        </div>
-        <script type="text/javascript">
-            initGaleria();
-        </script> 
-    </body>
+<div id="galeria" style="position:relative; display: none">
+    <ul id="gallery">
+        <li><img src="../images/imgBaru/flowing-rock.jpg" alt="Flowing Rock" title="Flowing Rock Caption"></li>
+        <li><img src="../images/imgBaru/stones.jpg" alt="Stones" title="Stones - from Apple images"></li>
+        <li><img src="../images/imgBaru/grass-blades.jpg" alt="Grass Blades" title="Apple nature desktop images"></li>
+        <li><img src="../images/imgBaru/ladybug.jpg" alt="Ladybug" title="Ut rutrum, lectus eu pulvinar elementum, lacus urna vestibulum ipsum"></li>
+        <li><img src="../images/imgBaru/lightning.jpg" alt="Lightning" title="Black &amp; White"></li>
+        <li><img src="../images/imgBaru/lotus.jpg" alt="Lotus" title="Fusce quam mi, sagittis nec, adipiscing at, sodales quis"></li>
+        <li><img src="../images/imgBaru/mojave.jpg" alt="Mojave" title="Suspendisse volutpat posuere dui. Suspendisse sit amet lorem et risus faucibus pellentesque."></li>
+        <li><img src="../images/imgBaru/pier.jpg" alt="Pier" title="Proin erat nisi"></li>
+        <li><img src="../images/imgBaru/sea-mist.jpg" alt="Sea Mist" title="Caption text from title"></li>
+    </ul>
+</div>       
 
-</html>
    
