--- a/info/planes/guajira.html
+++ b/info/planes/guajira.html
@@ -16,4 +16,4 @@ NO INCLUYE<br>
 * Seguros Hotelero, Gastos no estipulados en el plan.<br>
 
 </div>
-<a href="Galeria.php"><img alt="Guajira" src="../images/home/btn_galeria/btn_galeria_guajira.png" id="imagen_destino" style="display:block;"/></a>
+<a href="#"><img alt="Guajira" src="../images/home/btn_galeria/btn_galeria_guajira.png" id="imagen_destino" style="display:block;"/></a>
