--- a/info/planes/boyaca.html
+++ b/info/planes/boyaca.html
@@ -16,4 +16,4 @@ EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
 NO INCLUYE<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 </div>
- <a href="Galeria.php"><img alt="Boyaca" src="../images/home/btn_galeria/btn_galeria_boyaca.png" id="imagen_destino" style="display:block;"/></a>
+ <a href="#"><img alt="Boyaca" src="../images/home/btn_galeria/btn_galeria_boyaca.png" id="imagen_destino" style="display:block;"/></a>
