Cambiando boton de ver plan en decamerun Arreglando la Galeria

--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Providencia" src="../images/decamerun/img_providencia.png" id="imagen_centrada">
-    <a href="javascript:mostrar('plan_providencia','decamerun','html')" title="section1" >Ver Plan</a>
+    <a id="ver_plan" href="javascript:mostrar('plan_providencia','decamerun','html')" title="section1" ></a>
 </div>
