--- a/info/decamerun/baru.html
+++ b/info/decamerun/baru.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Baru" src="../images/decamerun/img_baru.png" id="imagen_centrada">
-    <a href="javascript:mostrar('plan_baru','decamerun','html')" title="section1" >Ver Plan</a>
+    <a id="ver_plan" href="javascript:mostrar('plan_baru','decamerun','html')" title="section1"></a>
 </div>
