--- a/info/decamerun/cartagena.html
+++ b/info/decamerun/cartagena.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Cartagena" src="../images/decamerun/img_cartagena.png" id="imagen_centrada">
-     <a href="javascript:mostrar('plan_cartagena','decamerun','html')" title="section1" >Ver Plan</a>
+     <a id="ver_plan" href="javascript:mostrar('plan_cartagena','decamerun','html')" title="section1" ></a>
 </div>
