--- a/info/decamerun/santamarta.html
+++ b/info/decamerun/santamarta.html
@@ -5,5 +5,5 @@
 </div>
 <div id="img">
     <img alt="Santa Marta" src="../images/decamerun/img_santamarta.png" id="imagen_centrada">
-    <a href="javascript:mostrar('plan_santamarta','decamerun','html')" title="section1" >Ver Plan</a>
+    <a id="ver_plan" href="javascript:mostrar('plan_santamarta','decamerun','html')" title="section1" ></a>
 </div>
