--- a/info/planes/cartagena.html
+++ b/info/planes/cartagena.html
@@ -14,4 +14,4 @@ EL PLAN INCLUYE (3 DIAS / 2 NOCHES)<br>
 NO INCLUYE<br>
 * Gastos no estipulados en el plan.<br>
 </div>
-<a href="#"><img alt="Cartagena" src="../images/home/btn_galeria/btn_galeria_cartagen.png" id="imagen_destino" style="display:block;"/></a>
+<a href="Galeria.php"><img alt="Cartagena" src="../images/home/btn_galeria/btn_galeria_cartagen.png" id="imagen_destino" style="display:block;"/></a>
