--- a/info/planes/san_andres.html
+++ b/info/planes/san_andres.html
@@ -26,4 +26,4 @@ NO INCLUYE<br>
 * Impuestos de entrada a la isla , Impuesto Jonny Cay,Gastos no estipulados en el plan.<br>
 
 </div>
-<a href="#"><img alt="Medellin" src="../images/home/btn_galeria/btn_galeria_medellin.png" id="imagen_destino" style="display:block;"/></a>
+<a href="Galeria.php"><img alt="Medellin" src="../images/home/btn_galeria/btn_galeria_medellin.png" id="imagen_destino" style="display:block;"/></a>
