--- a/info/planes/san_gil.html
+++ b/info/planes/san_gil.html
@@ -37,4 +37,4 @@ EL PLAN INCLUYE (3 DIAS - 2 NOCHES)<br>
 * Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 
 </div>
-<a href="#"><img alt="San Gil" src="../images/home/btn_galeria/btn_galeria_san_gil.png" id="imagen_destino" style="display:block;"/></a>
+<a href="Galeria.php"><img alt="San Gil" src="../images/home/btn_galeria/btn_galeria_san_gil.png" id="imagen_destino" style="display:block;"/></a>
