Agregando cambios en el footer- salidas pedagogicas y scripts

--- a/info/extras/footer.html
+++ b/info/extras/footer.html
@@ -1,1 +1,8 @@
-<div>Derechos Reservados<br>TerrazsanTours<br>2014</div>
+ <div id="contenedor_footer">
+    <div>Derechos Reservados<br>TerrazsanTours<br>2014</div>
+    <div id="redes_sociales">
+        <a href="https://www.facebook.com/terrazsantoursagenciadeviajesyturismo" target="_blank"><img src="../images/footer/facebook.png"></a>
+        <a href="https://twitter.com/terrazsantours" target="_blank"><img src="../images/footer/twitter.png"></a>
+        <a href="http://www.youtube.com/watch?v=PeeGqMz6l1g" target="_blank"><img src="../images/footer/youtube.png"></a>
+    </div>
+</div>     
