Agregando texto del footer

--- a/info/extras/footer.html
+++ b/info/extras/footer.html
@@ -1,8 +1,8 @@
  <div id="contenedor_footer">
-    <div>Derechos Reservados<br>TerrazsanTours<br>2014</div>
+    <div id="footer_texto">La Agencia de Viajes y Turismo Terrazsantours está comprometida con el Código de Conducta contra la Explotación y Violencia Sexual Infantil y en cumplimiento de los artículos 16 y 17 de la ley 679 de 2001 advierte sobre las consecuencias legales de la explotación y abuso sexual de menores de edad. Terrazsantours Agencia de Viajes está sujeta al régimen de responsabilidad ley 300/96 y el D.R 1075/97.</div>
     <div id="redes_sociales">
-        <a href="https://www.facebook.com/terrazsantoursagenciadeviajesyturismo" target="_blank"><img src="../images/footer/facebook.png"></a>
-        <a href="https://twitter.com/terrazsantours" target="_blank"><img src="../images/footer/twitter.png"></a>
-        <a href="http://www.youtube.com/watch?v=PeeGqMz6l1g" target="_blank"><img src="../images/footer/youtube.png"></a>
+        <a href="https://www.facebook.com/terrazsantoursagenciadeviajesyturismo" target="_blank"><img src="../images/footer/facebook.png" alt="facebook"/></a>
+        <a href="https://twitter.com/terrazsantours" target="_blank"><img src="../images/footer/twitter.png" alt="twitter"/></a>
+        <a href="http://www.youtube.com/watch?v=PeeGqMz6l1g" target="_blank"><img src="../images/footer/youtube.png" alt="youtube"/></a>
     </div>
 </div>     
