Arregland salidas pedagogicas

--- a/info/planes/popup.html
+++ b/info/planes/popup.html
@@ -1,3 +1,3 @@
 <div id="cont_imagen_info" >
-    <img alt="Imagen Informativa" src="../images/version 2.1/popup.jpg" id="img_info" />
+    <img alt="Imagen Informativa" src="../images/home/popup.jpg" id="img_info" />
 </div>
