Se modifico la funcion para el scroll y se cambiaron imagenes

--- a/info/extras/footer.html
+++ b/info/extras/footer.html
@@ -3,6 +3,6 @@
     <div id="redes_sociales">
         <a href="https://www.facebook.com/terrazsantoursagenciadeviajesyturismo" target="_blank"><img src="../images/footer/facebook.png" alt="facebook"/></a>
         <a href="https://twitter.com/terrazsantours" target="_blank"><img src="../images/footer/twitter.png" alt="twitter"/></a>
-        <a href="http://www.youtube.com/watch?v=PeeGqMz6l1g" target="_blank"><img src="../images/footer/youtube.png" alt="youtube"/></a>
+        <a href="https://www.youtube.com/channel/UCFuqpWfIIEz2kRqGK3Z0xKQ" target="_blank"><img src="../images/footer/youtube.png" alt="youtube"/></a>
     </div>
 </div>     
